<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="countdown_timer_text">(%d)</string>
    <string name="countdown_timer_finished_text">Gửi Lại Mã</string>
    <string name="Coach_Academy" translatable="true" />
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="video_thumbnail_1_1_ratio">Video thumbnail 1:1 ratio</string>
    <string name="video_lock">Video Lock</string>
    <string name="video_example">Video Example</string>
    <string name="uploader_icon">uploader icon</string>
    <string name="uploader">Uploader</string>
    <string name="description">description</string>
    <string name="book_img">book_img</string>
    <string name="book_text" />
    <string name="shop_item_title">Shop_Item_Title</string>
    <string name="Logout">Đăng xuất</string>
    <string name="profile_picture">Profile picture</string>
    <string name="ng_nh_p">Đăng Nhập</string>
</resources>