<?xml version="1.0" encoding="utf-8"?>
<com.cthacademy.android.custom.VideoContainerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="300dp"
    android:layout_height="0dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_weight="1">
    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:cardBackgroundColor="@android:color/transparent"
        android:layout_margin="2dp"
        app:cardCornerRadius="12dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:padding="8dp"
            android:background="@android:color/white"
            android:baselineAligned="false">
            <com.cthacademy.android.custom.SquareRelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="3.6">
                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    app:cardBackgroundColor="@android:color/transparent"
                    app:cardElevation="0dp"
                    app:cardCornerRadius="12dp">
                    <ImageView
                        android:id="@+id/Video_thumbnail"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:src="#D6D0D0"
                        android:scaleType="centerCrop"
                        android:contentDescription="@string/video_thumbnail_1_1_ratio" />
                    <ImageView
                        android:id="@+id/Video_lock"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_gravity="center"
                        android:src="@drawable/ic_lock_dark"
                        android:padding="10dp"
                        android:contentDescription="@string/video_lock" />
                    <TextView
                        android:id="@+id/Video_lock_point"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="54dp"
                        android:textAlignment="center"
                        android:text="100"
                        android:textColor="@color/black"
                        android:textStyle="bold"/>

                </androidx.cardview.widget.CardView>
            </com.cthacademy.android.custom.SquareRelativeLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="8dp"
                android:layout_weight="1.4"
                android:orientation="vertical">
                <TextView
                    android:id="@+id/Video_title"
                    android:text="@string/video_example"
                    android:textSize="18sp"
                    android:maxLines="1"
                    android:textColor="@color/black"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
                <TextView
                    android:id="@+id/Video_uploader"
                    android:text="@string/uploader"
                    android:textSize="12sp"
                    android:gravity="center_vertical"
                    android:textColor="@color/black"
                    android:maxLines="1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawablePadding="4dp"
                    app:drawableStartCompat="@drawable/ic_person_dark" />

                <TextView
                    android:id="@+id/Video_description"
                    android:text="@string/description"
                    android:textColor="@color/black"
                    android:textSize="12sp"
                    android:maxLines="1"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"/>
            </LinearLayout>
        </LinearLayout>
    </androidx.cardview.widget.CardView>

</com.cthacademy.android.custom.VideoContainerLayout>
